[package]
name = "noah-protocol"
version = "0.1.0"
edition = "2021"

description = "Protocol definitions and gRPC services for NoahDB"
license = "MIT"
repository = "https://github.com/fabianbele2605/NoahDB"
keywords = ["database", "grpc", "protocol", "nanodb"]
categories = ["database", "network-programming"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
prost = "0.12"
bytes = "1.5"
thiserror = "1.0"
tonic = "0.10"

[build-dependencies]
tonic-build = { workspace = true }
