[package]
name = "noah-server"
version = "0.1.0"
edition = "2021"

[dependencies]
noah-protocol = { path = "../noah-protocol" }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
tower = "0.4"
tower-http = { workspace = true }
dashmap = { workspace = true }
